<resources>
    <string name="app_name">Lab1</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="slash">/</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="star">*</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="clear">X</string>
    <string name="title_activity_notes">NotesActivity</string>
    <string name="radio_0">1</string>
    <string name="radio_1">2</string>
    <string name="radio_2">3</string>
    <string name="desc_label">Description</string>
    <string name="importance_label">Importance</string>
    <string name="name_label">Name</string>
    <string name="load_image_label">Load image</string>
    <string name="note_create_label">Create note</string>
    <string name="activity_1_label">Task 1</string>
    <string name="activity_2_label">Task 2</string>
    <string name="activity_3_label">Task 3</string>
    <string name="filter_by_imp_label">Filter by importance</string>
    <string name="filter_by_name_label">Filter by name</string>
    <string name="remove_filters_label">Remove all filters</string>
    <string name="hint">Enter search pattern</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="context_menu_title">Select The Action</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="specify_name">Specify name</string>
</resources>
