<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".calc.CalculatorActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/clear"
            android:textSize="30sp"
            android:gravity="center"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/output"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight="3"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_seven"
            android:text="@string/seven"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_eight"
            android:text="@string/eight"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_nine"
            android:text="@string/nine"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_slash"
            android:text="@string/slash"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_four"
            android:text="@string/four"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_five"
            android:text="@string/five"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_six"
            android:text="@string/six"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_mul"
            android:text="@string/star"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_one"
            android:text="@string/one"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_two"
            android:text="@string/two"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_three"
            android:text="@string/three"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_minus"
            android:text="@string/minus"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_zero"
            android:text="@string/zero"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_dot"
            android:text="@string/dot"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_equal"
            android:text="@string/equals"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_plus"
            android:text="@string/plus"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>
