<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="algie.lab1.MainActivity">

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:paddingBottom="20dp"
        android:id="@+id/first_activity_button"
        android:text="@string/activity_1_label"
        android:textSize="30sp" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:paddingBottom="20dp"
        android:id="@+id/second_activity_button"
        android:text="@string/activity_2_label"
        android:textSize="30sp" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/third_activity_button"
        android:text="@string/activity_3_label"
        android:textSize="30sp" />

</LinearLayout>
